2008-04-14: 1.11.20
More straightforward API for findPeaks.centWave, much less parameters are needed
    CAVE: peak width range (in seconds) is used instead of scale range
    CAVE: ppm instead of dev parameter
Added ... to diffreport to pass optional parameters to mt.teststat
Added value = c("into","maxo","intb") parameter to diffreport
Added warning if non-unique scantimes are detected to xcmsRaw()
rawEIC() verifies the scanrange  
findPeaks.centWave generates a warning if data seems to be not in centroid mode
Added method isCentroided()
Added prefilter option to findPeaks.centWave
Fixed bug in centWave/fitGauss
Added prefilter option to findmzROI
Speedup for findmzROI
Renamed findMZBoxes to findmzROI
Removed findMZBoxes from NAMESPACE

2008-04-02: 1.11.19
Import xcms from BioC 2.1

2008-04-02: 1.10.8
Fix duplicate setGeneric() which fails on R-2.7a
Fix BinLinBase which had an uninitialised argument in .Call()
Provide clean base for pulling 1.10.8 into 1.11.19

2008-01-24: 1.10.7
Fix in plot(eic) for xcmsEIC with absent groups

2007-11-13: 1.10.6
Removed unnecessary use of data.frame in findPeaks.centWave(), this fixes
a long delay when large peaklists are generated

2007-11-12: 1.10.5
Increased buffer size in findMZBoxes() to catch a rare bug

2007-11-07: 1.10.4
Standardised peak area calculation by introducing scan-distance multiplier to findPeaks.centWave()

2007-11-07: 1.10.3
Fixed a serious fillPeaks() bug introduced in version 1.9.5, which caused it to
silently fill in zero intensities for almost every missing peak

2007-11-01: 1.10.2
Fixed bug in findPeaks.centWave() buffer initialisation (mzboxes.c)
Added check in findPeaks.matchedFilter() for not picking filter artefacts 

2007-10-09: 1.10.1
Added error when xcmsRaw objects are read that have non-monotonic stantimes
Added warning when retcor() is probably overcorrecting
Fixed a bounds checking bug in specPeaks()

2007-10-08: 1.10.0
Bioconductor release 2.1

2007-09-17: 1.9.6
rawEIC uses binary search